dark mode issue

--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -143,7 +143,7 @@
 }
 @media screen and (max-width: 768px) {
     .text {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
 }
 
